--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Daftar Tugas Materi pHp</h1>
-    <p>Nama : Anisa Sri Rani</p>
+    <p>Nama : Anisa S. Rani</p>
 
     <ol>
         <li><a href="16 CV_Bootstrap/CV.html">Biodata</a></li>
